# developer-problem-solvers

./: .devguard.example.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-publish-python.yml  ci.yml  publish-python.yml  release-automation.yml
docs/architecture/: devguard-core.md
docs/roadmap/: phase-1.md  production-checklist.md
docs/usage/: advanced-features.md  ci-baseline-mode.md  pr-workflow-example.md  publish-python-packages.md
examples/: sample_insecure.py
modules/devguard-ai-validator/: README.md  pyproject.toml
modules/devguard-ai-validator/src/devguard_ai_validator/: __init__.py  cli.py
modules/devguard-ai-validator/tests/: test_cli.py
modules/devguard-core/: LICENSE  README.md  pyproject.toml
modules/devguard-core/rules/: default_rules.md
modules/devguard-core/src/devguard_core/: __init__.py  ast_checks.py  checks.py  cli.py  config.py  formatters.py  models.py  rules.py  scanner.py
modules/devguard-core/tests/: test_cli.py  test_scanner.py
scripts/: bump_versions.py  demo_pr_gate.sh  release_check.sh  update_changelog.py
