[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devguard-core"
version = "0.1.3"
description = "Static analysis engine for AI-generated code reliability, security, and CI gating"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DevGuard Contributors" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["static-analysis", "code-security", "sarif", "devsecops", "ci", "ai-generated-code", "python-cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/upendra-manike/developer-problem-solvers"
Repository = "https://github.com/upendra-manike/developer-problem-solvers"
Issues = "https://github.com/upendra-manike/developer-problem-solvers/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8.0", "build>=1.2.0"]

[project.scripts]
devguard-core = "devguard_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
